- Improved CSS of boolean fields in "detail_table". - Improved CSS of "task_list". - Improved CSS of "activity_list".
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@408 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/project_timeline.html
+++ b/themes/default/templates/projects/project_timeline.html
@@ -29,7 +29,7 @@
         <dd>
             <ul>
             {% for item in date.list %}
-                <li class="{{ item.action }}">
+                <li class="{{ item.signature }}">
                     <strong>{{ item.created.time }}</strong>
                     {% if item.get_absolute_url %}
                     <a href="{{ item.get_absolute_url }}">{{ item|capfirst }}</a>
