--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -324,6 +324,19 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     margin-bottom: 10px;
 }
 
+.yes, .no {
+    display: block;
+    width: 16px;
+    height: 16px;
+    font-size: 0;
+    background: no-repeat center;
+    margin: 0 auto;
+}
+
+.yes { background-image: url(images/success.png); }
+
+.no { background-image: url(images/error.png); }
+
 .add a, .edit a, .delete a, .all a {
     float: left;
     width: 16px;
@@ -693,6 +706,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     border-bottom: 1px solid #d6d6d6;
     padding: 10px 15px 10px 35px;
     background: no-repeat 10px 10px;
+    background-image: url(images/time.png);
 }
 
 #content .activities li strong {
@@ -720,6 +734,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     border-bottom: 1px solid #d6d6d6;
     padding: 10px 15px 10px 35px;
     background: no-repeat 10px 10px;
+    background-image: url(images/note.png);
 }
 
 #content .tasks li.closed, #content .tasks li.delayed { background-image: url(images/success.png); }
