- Improved stream rendering logic (it's now based on templates). - Added base activity templates for CRUD actions. - Updated all existing activity notifications.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@414 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -711,7 +711,14 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #content .activities .timesince  { float: right; }
 
-#content .activities p.description  { margin-left: 85px; }
+#content .activities .description  {
+    margin-top: 10px;
+    margin-left: 85px;
+}
+
+#content .activities .description dt { border: none; }
+
+#content .activities .description dd { margin-left: 20px; }
 
 #content .tasks dt {
     border-bottom: 2px solid #d6d6d6;
