--- a/themes/default/templates/menus/menu.html
+++ b/themes/default/templates/menus/menu.html
@@ -5,9 +5,11 @@
 {% for link in links %}
     {% if link.authorized %}
     <li class="menu-link" id="{{ link.slug|escape }}-link">
-        <a{% matchlink link request.get_full_path %} href="{{ link.url|escape }}" title="{% trans link.description|default:link.title|escape %}">
+        {% with link.description|default:link.title|escape as link_title %}
+        <a{% matchlink link request.get_full_path %} href="{{ link.url|escape }}" title="{% trans link_title %}">
             {% trans link.title|escape %}
         </a>
+        {% endwith %}
         {% if link.submenu %}
         {% menu link.submenu.slug %}
         {% endif %}
