--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -841,7 +841,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     border: none;
     border-top: 1px solid #d6d6d6;
     border-right: 1px solid #d6d6d6;
-    padding: 10px;
+    padding: 10px 15px;
 }
 
 #main .sections .menu li a.active {
