--- a/themes/default/templates/elements/filterbox.html
+++ b/themes/default/templates/elements/filterbox.html
@@ -7,28 +7,33 @@
         {% csrf_token %}
         
         {% if filter_fields and filter_fields|length > 1 %}
-        {% for field, value in filter_fields %}
+        {% for field, value in filter_fields.items %}
         {% if value %}
         <label for="{{ field.attname }}">{{ field.verbose_name|capfirst }}</label>
         <input class="query" type="text" name="{{ field.attname }}" value="{{ value }}"/>
         <button class="delete" type="submit" name="sub_{{ field.attname }}"><span>-</span></button>
         <br/>
         {% endif %}
-        {% endfor %}
+        {% endfor %}    
+
+        {% if filter_fields.values|join:" "|cut:"None"|wordcount != filter_fields.keys|length %}
         <select class="filter_field" name="filter_field">
-            {% for field, value in filter_fields %}
+            {% for field, value in filter_fields.items %}
             {% if not value %}
             <option value="{{ field.name }}">{% trans field.verbose_name|capfirst %}</option>
             {% endif %}
             {% endfor %}
         </select>
         {% endif %}
+        {% endif %}
 
+        {% if filter_fields.values|join:" "|cut:"None"|wordcount != filter_fields.keys|length %}
         <input class="query" type="text" name="filter_query"/>
 
         {% if filter_fields and filter_fields|length > 1 %}
         <button class="add" type="submit" name="add_filter_field"><span>+</span></button>
         <br/>
+        {% endif %}
         {% endif %}
 
         <span class="submit"><input type="submit" name="filter" value="{% trans 'Filter' %}"/></span>
