Fixed TICKET_DEFAULT_STATUS setting name.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@420 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -278,7 +278,7 @@ TICKET_STATUS_CHOICES = (
     ('review', _('awaiting review')),
 )
 
-PROJECT_DEFAULT_STATUS = 'new'
+TICKET_DEFAULT_STATUS = 'new'
 
 TICKET_CLOSE_STATUSES = ('invalid', 'duplicate', 'resolved')
 """
