Fixed displaying of fields with choices.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@422 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -70,7 +70,7 @@
                 </tr>
                 <tr>
                     <th>{% trans "Status" %}:</th>
-                    <td>{% trans object.status %}</td>
+                    <td>{% trans object.get_status_display %}</td>
                     <th>{% trans "Closed on" %}:</th>
                     <td>
                         {% if object.closed %}
