Improved style of close/reopen actions in the "task_detail" view.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@425 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -334,7 +334,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 .no { background-image: url(images/error.png); }
 
-.add a, .edit a, .delete a, .all a, .import a, .export a {
+.add a, .edit a, .delete a, .all a, .import a, .export a, .open a, .reopen a, .close a {
     float: left;
     width: 16px;
     height: 16px;
@@ -368,6 +368,18 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 .export a { background-image: url(images/export.png); }
 
 .export a:hover { background-image: url(images/export_hover.png); }
+
+.open a { background-image: url(images/open.png); }
+
+.open a:hover { background-image: url(images/open_hover.png); }
+
+.reopen a { background-image: url(images/reopen.png); }
+
+.reopen a:hover { background-image: url(images/reopen_hover.png); }
+
+.close a { background-image: url(images/close.png); }
+
+.close a:hover { background-image: url(images/close_hover.png); }
 
 .progressbar {
     clear: both;
