Added close/reopen logic to milestones.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@426 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1058,6 +1058,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 #main .milestones .actions {
     position: relative;
     float: right;
+    width: auto;
     top: -22px;
     margin-bottom: -22px;
 }
