--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -47,6 +47,13 @@
         <li class="reopen"><a title="{% trans 'Reopen' %}" href="{% url milestone_reopen object.project.slug object.slug %}">{% trans 'Reopen' %}</a></li>
         {% endif %}
         {% endif %}
+        {% if perms.projects.change_milestone %}
+        {% if user not in object.stream.followers.all %}
+        <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
+        {% else %}
+        <li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
+        {% endif %}
+        {% endif %}
     </ul>
 </div>
 {% objects_from object %}
