--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -38,6 +38,13 @@
         {% if perms.projects.change_project %}
         <li class="all"><a title="{% trans 'All' %}" href="{% url project_list %}">{% trans 'All' %}</a></li>
         {% endif %}
+        {% if perms.projects.change_project %}
+        {% if user not in object.stream.followers.all %}
+        <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
+        {% else %}
+        <li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
+        {% endif %}
+        {% endif %}
     </ul>
 </div>
 {% objects_from object %}
