Fixed filterbox rendering when only one filter field is displayed.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@434 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/filterbox.css
+++ b/themes/default/static/css/filterbox.css
@@ -53,6 +53,8 @@
     margin-top: -29px;
 }
 
+.filterbox .submit .alone { margin-top: 29px; }
+
 .filterbox .submit input, .filterbox .submit input:hover {
     width: 24px;
     height: 24px;
