--- a/themes/default/templates/elements/filterbox.html
+++ b/themes/default/templates/elements/filterbox.html
@@ -3,10 +3,12 @@
 {% block extrahead %}<link rel="stylesheet" href="{{ STATIC_URL }}css/filterbox.css" type="text/css" media="all"/>{% endblock %}
 
 <div class="filterbox">
+    {% if filter_fields|length > 0 %}
     <form action="." method="post">
         {% csrf_token %}
-        
-        {% if filter_fields and filter_fields|length > 1 %}
+
+        {% if filter_fields|length > 1 %}
+
         {% for field, value in filter_fields.items %}
         {% if value %}
         <label for="{{ field.attname }}">{{ field.verbose_name|capfirst }}</label>
@@ -25,7 +27,6 @@
             {% endfor %}
         </select>
         {% endif %}
-        {% endif %}
 
         {% if filter_fields.values|join:" "|cut:"None"|wordcount != filter_fields.keys|length %}
         <input class="query" type="text" name="filter_query"/>
@@ -34,8 +35,21 @@
         <button class="add" type="submit" name="add_filter_field"><span>+</span></button>
         <br/>
         {% endif %}
+
         {% endif %}
 
         <span class="submit"><input type="submit" name="filter" value="{% trans 'Filter' %}"/></span>
+
+        {% else %}
+
+        {% with field=filter_fields.keys|first value=filter_fields.values|first %} 
+        <label for="{{ field.attname }}">{{ field.verbose_name|capfirst }}</label>
+        <input class="query" type="text" name="{{ field.attname }}" value="{{ value }}"/>
+        {% endwith %}
+
+        <span class="submit"><input class="alone" type="submit" name="filter" value="{% trans 'Filter' %}"/></span>
+
+        {% endif %}
     </form>
+    {% endif %}
 </div>
