--- a/themes/default/templates/elements/filterbox.html
+++ b/themes/default/templates/elements/filterbox.html
@@ -44,7 +44,7 @@
 
         {% with field=filter_fields.keys|first value=filter_fields.values|first %} 
         <label for="{{ field.attname }}">{{ field.verbose_name|capfirst }}</label>
-        <input class="query" type="text" name="{{ field.attname }}" value="{{ value }}"/>
+        <input class="query" type="text" name="{{ field.attname }}"{% if value %} value="{{ value }}"{% endif %}/>
         {% endwith %}
 
         <span class="submit"><input class="alone" type="submit" name="filter" value="{% trans 'Filter' %}"/></span>
